--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <td><img src="mikiyas_pp.png" alt="Profile Picture"></td>
             <td>
                 <h1>Mikiyas Yehualashet</h1>
-                <p><em>Consultant in <a href="https://fairfaxtechnologies.com/"><strong>Fairfax Technologies</strong></em><p></p></a>
+                <p><em>Consultant in <a href="https://fairfaxtechnologies.com/"><strong>Fairfax Technologies</strong></em></p></a>
                 <p>I am SAP HCM consultant. I ❤️ coffee and coding.</p>
             </td>
         </tr>
